# krsyn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  constants.h  krsyn.c  krsyn.h  krsyn.kdev4
editor/: .audio_manager.h.swp  CMakeLists.txt  KrsynEditorMain.cpp  KrsynEditorMain.h  LICENSE  audio_manager.c  audio_manager.h  editor.cpp  editor_menu.c  editor_menu.h  editor_state.c  editor_state.h  fm_data_list.c  fm_data_list.h  fm_data_params.c  fm_data_params.h  gui_file_dialog.h  main.c  param_editor.c  param_editor.h  raygui_impl.c  raygui_impl.h
editor/resource/css/: style.css
editor/resources/test_tone/: EPiano.fmt  EPiano.ksyt
editor/test_tone/: EPiano.ksyb  EPiano.ksyt
editor/test_tones/: EPiano.ksyb  EPiano.ksyt  test.kstb
krsyn/: io.c  io.h  krsong.c  krsong.h  krsynth.c  krsynth.h  krtones.c  krtones.h  logger.c  logger.h  math.c  math.h  midi.c  midi.h  score.c  score.h  string.c  string.h  synth.c  synth.h  tone_list.c  tone_list.h  tones.c  tones.h  vector.c  vector.h  wave.c  wave.h
old_editor/: CMakeLists.txt  audio_manager.c  audio_manager.h  editor_menu.c  fm_data_params.c  fm_data_params.h  krsyn_editor  main.c  param_editor.c  param_editor.h
raygui_editor/: CMakeLists.txt  gui_file_dialog.h  main.c  memo1
tests/: CMakeLists.txt  EPiano.ksyt  a.mid  app.cpp  io_test.c  midi_file_test.c  wav_write_test.c
tests/resources/: test.mid
tools/: CMakeLists.txt
tools/editor/: gui_file_dialog.h  main.c
tools/player/: main.c
tools/raygui_impl/: raygui_impl.c  raygui_impl.h
tools/test_tones/: test.kstb  test.kstc
